--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Playwright Project",
   "main": "index.js",
   "scripts": {
-    "test" : "playwright test --headed"
+    "test": "playwright test --headed"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@playwright/test": "^1.41.2",
     "@types/node": "^20.11.16"
+  },
+  "dependencies": {
+    "moment": "^2.30.1"
   }
 }
